--- a/langs/fr_FR/cdav.lang
+++ b/langs/fr_FR/cdav.lang
@@ -1,6 +1,11 @@
 # Dolibarr language file - Source file is en_US - cdav
 CardDAVurl=URL CardDAV
 CalDAVurl=URL CalDAV
-URLGeneric=Cette URL peut être utilisée avec un client de synchronisation CalDAV/CardDAV :
+ICSurl=URL ICS
+URLforICS=Cette URL peut être utilisée avec un client de synchronisation :
+Full=Complet
+NoLabel=Sans label
+Busy=Occupé
+URLGeneric=Ces URL peut être utilisée avec un client de synchronisation CalDAV/CardDAV :
 URLforCardDAV=Si votre client ne détecte pas votre carnet d'adresse cette URL complète peut être précisée :
 URLforCalDAV=Si votre client ne détecte pas vos agendas ces URLs complètes peuvent être précisées :
