Sur la branche master: Update copyright notice and readme file

--- a/langs/en_US/cdav.lang
+++ b/langs/en_US/cdav.lang
@@ -2,7 +2,7 @@
 CardDAVurl=CardDAV URL
 CalDAVurl=CalDAV URL
 ICSurl=URL ICS
-URLforICS=This URL can be used by a synchronisation client tool :
+URLforICS=This URL can be used by a synchronisation client tool (read only) :
 Full=Full
 NoLabel=Without label
 Busy=Busy
