Sur la branche adherents: adherent

--- a/langs/en_US/cdav.lang
+++ b/langs/en_US/cdav.lang
@@ -10,3 +10,7 @@ URLGeneric=These URL can be used by a CalDAV/CardDAV synchronisation client tool
 URLforCardDAV=If your client does not detect your address book this full URL can be specified :
 URLforCalDAV=If your client does not detect your agendas these full URLs can be specified :
 DurationEx=Duration (ex: 4H, 3D)
+ActivateDavX5autoURL=Enable generation of a qrcode for DavX5 auto configuration?
+ActivateDavX5autoURLTooltip=If you enable this option, a qrcode will be display to help config of Si vous activez cette option un qrcode d'auto-configuration for your smartphone
+URLForDavX5=Automatic setup for DavX5
+URLForDavX5Tooltip=Use Free Software <a href="https://github.com/markusfisch/BinaryEye">BinaryEye</a> (available on F-Droid) to flash the qrcode and autoconfig DavX5!
